BaliParser.py
# Generated from Bali.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class BaliParser ( Parser ):

    grammarFileName = "Bali.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "')'", "','", "'{'", "'}'", 
                     "'var'", "'='", "';'", "'print'", "'if'", "'else'", 
                     "'while'", "'return'", "'do'", "'-'", "'!'", "'+'", 
                     "'*'", "'/'", "'&'", "'|'", "'<'", "'>'", "'=='", "'!='", 
                     "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGER", "ID", "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_function = 1
    RULE_params = 2
    RULE_arguments = 3
    RULE_function_body = 4
    RULE_function_name = 5
    RULE_function_call = 6
    RULE_declaration = 7
    RULE_declarations = 8
    RULE_statements = 9
    RULE_statement = 10
    RULE_location = 11
    RULE_exp = 12
    RULE_literal = 13

    ruleNames =  [ "program", "function", "params", "arguments", "function_body", 
                   "function_name", "function_call", "declaration", "declarations", 
                   "statements", "statement", "location", "exp", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    INTEGER=29
    ID=30
    WS=31
    COMMENT=32
    MULTILINE_COMMENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(BaliParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaliParser.StatementContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.FunctionContext)
            else:
                return self.getTypedRuleContext(BaliParser.FunctionContext,i)


        def getRuleIndex(self):
            return BaliParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BaliParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BaliParser.T__0) | (1 << BaliParser.T__1) | (1 << BaliParser.T__6) | (1 << BaliParser.T__9) | (1 << BaliParser.T__10) | (1 << BaliParser.T__12) | (1 << BaliParser.T__13) | (1 << BaliParser.T__14) | (1 << BaliParser.T__15) | (1 << BaliParser.T__16) | (1 << BaliParser.T__26) | (1 << BaliParser.T__27) | (1 << BaliParser.INTEGER) | (1 << BaliParser.ID))) != 0):
                self.state = 31
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BaliParser.T__6]:
                    self.state = 28
                    self.declaration()
                    pass
                elif token in [BaliParser.T__1, BaliParser.T__9, BaliParser.T__10, BaliParser.T__12, BaliParser.T__13, BaliParser.T__14, BaliParser.T__15, BaliParser.T__16, BaliParser.T__26, BaliParser.T__27, BaliParser.INTEGER, BaliParser.ID]:
                    self.state = 29
                    self.statement()
                    pass
                elif token in [BaliParser.T__0]:
                    self.state = 30
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_name(self):
            return self.getTypedRuleContext(BaliParser.Function_nameContext,0)


        def function_body(self):
            return self.getTypedRuleContext(BaliParser.Function_bodyContext,0)


        def params(self):
            return self.getTypedRuleContext(BaliParser.ParamsContext,0)


        def getRuleIndex(self):
            return BaliParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = BaliParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(BaliParser.T__0)
            self.state = 37
            self.function_name()
            self.state = 38
            self.match(BaliParser.T__1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BaliParser.ID:
                self.state = 39
                self.params()


            self.state = 42
            self.match(BaliParser.T__2)
            self.state = 43
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BaliParser.ID)
            else:
                return self.getToken(BaliParser.ID, i)

        def getRuleIndex(self):
            return BaliParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = BaliParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(BaliParser.ID)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BaliParser.T__3:
                self.state = 46
                self.match(BaliParser.T__3)
                self.state = 47
                self.match(BaliParser.ID)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def getRuleIndex(self):
            return BaliParser.RULE_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = BaliParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.exp(0)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BaliParser.T__3:
                self.state = 54
                self.match(BaliParser.T__3)
                self.state = 55
                self.exp(0)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(BaliParser.DeclarationsContext,0)


        def statements(self):
            return self.getTypedRuleContext(BaliParser.StatementsContext,0)


        def getRuleIndex(self):
            return BaliParser.RULE_function_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body" ):
                return visitor.visitFunction_body(self)
            else:
                return visitor.visitChildren(self)




    def function_body(self):

        localctx = BaliParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(BaliParser.T__4)
            self.state = 62
            self.declarations()
            self.state = 63
            self.statements()
            self.state = 64
            self.match(BaliParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BaliParser.ID, 0)

        def getRuleIndex(self):
            return BaliParser.RULE_function_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_name" ):
                return visitor.visitFunction_name(self)
            else:
                return visitor.visitChildren(self)




    def function_name(self):

        localctx = BaliParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(BaliParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_name(self):
            return self.getTypedRuleContext(BaliParser.Function_nameContext,0)


        def arguments(self):
            return self.getTypedRuleContext(BaliParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return BaliParser.RULE_function_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = BaliParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.function_name()
            self.state = 69
            self.match(BaliParser.T__1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BaliParser.T__1) | (1 << BaliParser.T__15) | (1 << BaliParser.T__16) | (1 << BaliParser.T__26) | (1 << BaliParser.T__27) | (1 << BaliParser.INTEGER) | (1 << BaliParser.ID))) != 0):
                self.state = 70
                self.arguments()


            self.state = 73
            self.match(BaliParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(BaliParser.LocationContext,0)


        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def getRuleIndex(self):
            return BaliParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = BaliParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(BaliParser.T__6)
            self.state = 76
            self.location()
            self.state = 77
            self.match(BaliParser.T__7)
            self.state = 78
            self.exp(0)
            self.state = 79
            self.match(BaliParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(BaliParser.DeclarationContext,i)


        def getRuleIndex(self):
            return BaliParser.RULE_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = BaliParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BaliParser.T__6:
                self.state = 81
                self.declaration()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaliParser.StatementContext,i)


        def getRuleIndex(self):
            return BaliParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = BaliParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BaliParser.T__1) | (1 << BaliParser.T__9) | (1 << BaliParser.T__10) | (1 << BaliParser.T__12) | (1 << BaliParser.T__13) | (1 << BaliParser.T__14) | (1 << BaliParser.T__15) | (1 << BaliParser.T__16) | (1 << BaliParser.T__26) | (1 << BaliParser.T__27) | (1 << BaliParser.INTEGER) | (1 << BaliParser.ID))) != 0):
                self.state = 87
                self.statement()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BaliParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)

        def statements(self):
            return self.getTypedRuleContext(BaliParser.StatementsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExpStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpStatement" ):
                return visitor.visitExpStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def location(self):
            return self.getTypedRuleContext(BaliParser.LocationContext,0)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statements(self):
            return self.getTypedRuleContext(BaliParser.StatementsContext,0)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.StatementsContext)
            else:
                return self.getTypedRuleContext(BaliParser.StatementsContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = BaliParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = BaliParser.AssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.location()
                self.state = 94
                self.match(BaliParser.T__7)
                self.state = 95
                self.exp(0)
                self.state = 96
                self.match(BaliParser.T__8)
                pass

            elif la_ == 2:
                localctx = BaliParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(BaliParser.T__9)
                self.state = 99
                self.exp(0)
                self.state = 100
                self.match(BaliParser.T__8)
                pass

            elif la_ == 3:
                localctx = BaliParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.match(BaliParser.T__10)
                self.state = 103
                self.match(BaliParser.T__1)
                self.state = 104
                self.exp(0)
                self.state = 105
                self.match(BaliParser.T__2)
                self.state = 106
                self.match(BaliParser.T__4)
                self.state = 107
                self.statements()
                self.state = 108
                self.match(BaliParser.T__5)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BaliParser.T__11:
                    self.state = 109
                    self.match(BaliParser.T__11)
                    self.state = 110
                    self.match(BaliParser.T__4)
                    self.state = 111
                    self.statements()
                    self.state = 112
                    self.match(BaliParser.T__5)


                self.state = 116
                self.match(BaliParser.T__8)
                pass

            elif la_ == 4:
                localctx = BaliParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(BaliParser.T__12)
                self.state = 119
                self.match(BaliParser.T__1)
                self.state = 120
                self.exp(0)
                self.state = 121
                self.match(BaliParser.T__2)
                self.state = 122
                self.match(BaliParser.T__4)
                self.state = 123
                self.statements()
                self.state = 124
                self.match(BaliParser.T__5)
                self.state = 125
                self.match(BaliParser.T__8)
                pass

            elif la_ == 5:
                localctx = BaliParser.ExpStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.exp(0)
                self.state = 128
                self.match(BaliParser.T__8)
                pass

            elif la_ == 6:
                localctx = BaliParser.ReturnStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.match(BaliParser.T__13)
                self.state = 131
                self.exp(0)
                self.state = 132
                self.match(BaliParser.T__8)
                pass

            elif la_ == 7:
                localctx = BaliParser.DoWhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 134
                self.match(BaliParser.T__14)
                self.state = 135
                self.match(BaliParser.T__4)
                self.state = 136
                self.statements()
                self.state = 137
                self.match(BaliParser.T__5)
                self.state = 138
                self.match(BaliParser.T__12)
                self.state = 139
                self.match(BaliParser.T__1)
                self.state = 140
                self.exp(0)
                self.state = 141
                self.match(BaliParser.T__2)
                self.state = 142
                self.match(BaliParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LocationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BaliParser.ID, 0)

        def getRuleIndex(self):
            return BaliParser.RULE_location

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocation" ):
                return visitor.visitLocation(self)
            else:
                return visitor.visitChildren(self)




    def location(self):

        localctx = BaliParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_location)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BaliParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BaliParser.RULE_exp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LiteralExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(BaliParser.LiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralExp" ):
                return visitor.visitLiteralExp(self)
            else:
                return visitor.visitChildren(self)


    class NotExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(BaliParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExp" ):
                return visitor.visitNotExp(self)
            else:
                return visitor.visitChildren(self)


    class AndExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExp" ):
                return visitor.visitAndExp(self)
            else:
                return visitor.visitChildren(self)


    class AddExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExp" ):
                return visitor.visitAddExp(self)
            else:
                return visitor.visitChildren(self)


    class DivExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivExp" ):
                return visitor.visitDivExp(self)
            else:
                return visitor.visitChildren(self)


    class MulExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExp" ):
                return visitor.visitMulExp(self)
            else:
                return visitor.visitChildren(self)


    class EqExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqExp" ):
                return visitor.visitEqExp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_call(self):
            return self.getTypedRuleContext(BaliParser.Function_callContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExp" ):
                return visitor.visitFunctionCallExp(self)
            else:
                return visitor.visitChildren(self)


    class LessThanExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaliParser.ExpContext)
            else:
                return self.getTypedRuleContext(BaliParser.ExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThanExp" ):
                return visitor.visitLessThanExp(self)
            else:
                return visitor.visitChildren(self)


    class NegExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BaliParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)
